--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>calcStat</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="color1">COLOR 1</div>
+    <div class="color2">COLOR 2</div>
+    <div class="color3">COLOR 3</div>
+    <div class="color4">COLOR 4</div>
+  </body>
 </html>
