--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>calcStat</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="color1">COLOR 1</div>
-    <div class="color2">COLOR 2</div>
-    <div class="color3">COLOR 3</div>
-    <div class="color4">COLOR 4</div>
+    <div class="container">
+      <h1>Введите дату</h1>
+      <input type="date" id="dateInput" />
+      <button onclick="displayDate()">Подтвердить</button>
+      <div class="result" id="result"></div>
+    </div>
+    <script src="./calc.js"></script>
   </body>
 </html>
