--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Введите дату</h1>
+      <h1>Выберите дату</h1>
       <input type="date" id="dateInput" />
       <button onclick="displayDate()">Подтвердить</button>
       <div class="result" id="result"></div>
