--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
       <div class="result" id="result"></div>
     </div>
     <script src="./calc.js"></script>
+    <div class="container">
+      <h1>Выберите дату</h1>
+      <input type="date" id="dateInput" />
+      <button onclick="displayDate()">Подтвердить</button>
+      <div class="result" id="result"></div>
+    </div>
   </body>
 </html>
