--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <script src="script_rate.js"></script>
-    <script src="./calc.js"></script>
+    <script src="calc.js"></script>
 
     <div class="container">
       <h1>Выберите дату</h1>
@@ -21,13 +21,28 @@
       <div class="result" id="result"></div>
     </div>
     <div class="container">
-      <!-- Форма для ввода даты -->
-      <label for="date">Выберите дату:</label>
-      <input type="date" id="dateCur" name="date" />
-      <button onclick="getCurrency()">Получить курс</button>
-
-      <!-- Место для вывода курса -->
-      <p id="rate"></p>
+      <label for="amount"></label>
+      <input
+        type="number"
+        id="amount"
+        placeholder="Введите сумму"
+        step="0.01"
+        min="0.01"
+      />
+      <label for="currencySelect"></label>
+      <select id="currencySelect">
+        <option value="USD">USD (840)</option>
+        <option value="EUR">EUR (978)</option>
+        <option value="RUR">RUR (643)</option>
+      </select>
+      <div class="button-container">
+        <button id="addButton">Добавить</button>
+        <button id="clearButton">Очистить</button>
+        <button id="calculateButton">Расчет</button>
+      </div>
+      <div id="resultContainer"></div>
     </div>
+
+    <script src="script_currency.js"></script>
   </body>
 </html>
