добавлены опции валюты

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         <option value="USD">USD (840)</option>
         <option value="EUR">EUR (978)</option>
         <option value="RUR">RUR (643)</option>
+        <option value="BYN">BYN (933)</option>
       </select>
       <div class="button-container">
         <button id="addButton">Добавить</button>
         <button id="clearButton">Очистить</button>
-        <button id="calculateButton">Расчет</button>
+        <!-- <input type="date" id="dateInput" /> -->
       </div>
       <div id="resultContainer"></div>
     </div>
