--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       <div class="result" id="result"></div>
     </div>
     <div class="container">
+      <input type="date" id="dateInputConverter" />
       <label for="amount"></label>
       <input
-        type="number"
+        type="text"
         id="amount"
         placeholder="Введите сумму"
         step="0.01"
@@ -39,7 +40,7 @@
       <div class="button-container">
         <button id="addButton">Добавить</button>
         <button id="clearButton">Очистить</button>
-        <!-- <input type="date" id="dateInput" /> -->
+        <button id="doneButton">✔️</button>
       </div>
       <div id="resultContainer"></div>
     </div>
