--- a/index.html
+++ b/index.html
@@ -16,21 +16,14 @@
 
     <div class="container">
       <h1>Выберите дату</h1>
-      <input type="date" id="dateInput" />
+      <input type="date" id="dateInput" min="2024-01-01" max="2025-12-31" />
       <button onclick="displayDate()">Подтвердить</button>
       <div class="result" id="result"></div>
     </div>
     <div class="container">
-      <input type="date" id="dateInputConverter" />
-      <label for="amount"></label>
-      <input
-        type="text"
-        id="amount"
-        placeholder="Введите сумму"
-        step="0.01"
-        min="0.01"
-      />
-      <label for="currencySelect"></label>
+      <input type="date" id="dateInputConverter" min="2016-07-01" />
+      <input type="text" id="amount" placeholder="Введите сумму" />
+
       <select id="currencySelect">
         <option value="USD">USD (840)</option>
         <option value="EUR">EUR (978)</option>
