--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     />
   </head>
   <body>
-    <script src="script_rate.js"></script>
     <script src="calc.js"></script>
 
     <div class="container">
       <h1>Выберите дату</h1>
       <input type="date" id="dateInput" min="2024-01-01" max="2025-12-31" />
+      <!-- для периода с 2026 года необходимо корректировать "calc.js" путем добавления выходных дней и переносов -->
       <button onclick="displayDate()">Подтвердить</button>
       <div class="result" id="result"></div>
     </div>
     <div class="container">
+      <h1>Выберите дату</h1>
       <input type="date" id="dateInputConverter" min="2016-07-01" />
       <input type="text" id="amount" placeholder="Введите сумму" />
 
