добавлен медиа-запрос. адаптировано для экранов  до 768px

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <script src="calc.js"></script>
 
     <div class="container_01">
-      <h1>Выберите дату</h1>
+      <h1>Выберите дату поступления:</h1>
       <input type="date" id="dateInput" min="2024-01-01" max="2025-12-31" />
       <!-- для периода с 2026 года необходимо корректировать "calc.js" путем добавления выходных дней и переносов -->
       <button onclick="displayDate()">Подтвердить</button>
       <div class="result" id="result"></div>
     </div>
     <div class="container_02">
-      <h1>Выберите дату</h1>
+      <h1>Выберите дату курса валют:</h1>
       <input type="date" id="dateInputConverter" min="2016-07-01" />
       <input type="text" id="amount" placeholder="Введите сумму" />
 
