добалено нав.панель. элементы, анимированно ЛОГО

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>calcStat</title>
     <link rel="stylesheet" href="./style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
   </head>
 
   <body>
+    <header class="nav-container">
+      <div class="nav-item nav-item-logo"><a href="#">stat&#128161helper</a></div>
+        <div class="nav-item nav-item-menu" id="nav-menu">
+          <ul>
+          <li><a href="#">Инструкция</a></li>
+          <li><a href="#">Резерв</a></li>
+          <li><a href="#">Резерв</a></li>
+        </ul>
+        </div>
+        <div class="nav-item nav-item-toggle" id="nav-toggle" >
+          <div class="toggle-bar toggle-bar-top"></div>
+          <div class="toggle-bar toggle-bar-middle"></div>
+          <div class="toggle-bar toggle-bar-bottom"></div>
+        </div>
+    </header>
     <script src="calc.js"></script>
 
     <div class="container_01">
