--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
     </header>
     <script src="calc.js"></script>
+    <script src="toggle.js"></script>
 
     <div class="container_01">
       <h1>Выберите дату поступления:</h1>
