discription test added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="calc.html">Расчет срока ИМ СД</a></li>
             <li><a href="currency.html">Конвертор валют СД</a></li>
-            <li><a href="#">О приложении</a></li>
+            <li><a href="about.html">О приложении</a></li>
         </ul>
         </div>
         <div class="nav-item nav-item-toggle" id="nav-toggle" >
