app specification add

--- a/about.html
+++ b/about.html
@@ -28,26 +28,15 @@
     </header>
     <script src="toggle.js"></script>
     <div class="container_03"> 
-        <h1>Lorem ipsum dolor sit.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolores eius nobis ex mollitia quisquam iure porro voluptas sunt, ut sapiente nisi, id distinctio sequi iusto voluptatem delectus nemo quo!
-        Debitis, obcaecati quisquam quidem adipisci rerum magni ea veniam voluptate eos culpa velit mollitia sapiente molestiae omnis optio. Et praesentium obcaecati minus? Dolorum facere id doloremque rerum, tempore consequuntur inventore!
-        Beatae laborum numquam a iste voluptas consectetur itaque earum quae dolores soluta. Tempora, tempore aliquam nobis autem eum doloremque, ipsum voluptatum nostrum reiciendis, dolor maxime. Sed ipsa illo odit minima.
-        Inventore doloribus consequuntur corrupti quod sed repellat odit officia, ab praesentium recusandae, impedit libero. Odit reprehenderit possimus, quam accusantium porro in culpa sapiente beatae. Aliquid unde earum consequatur consequuntur quasi!
-        Esse, quo explicabo tenetur ab doloremque ut vitae et optio corrupti animi! Fuga, accusamus officia. Quibusdam ratione placeat earum temporibus quas, culpa commodi praesentium, mollitia alias magnam, laborum eos iusto!
-        Velit molestiae soluta temporibus maiores dignissimos porro aspernatur odio totam sit maxime iste ut quaerat, amet omnis voluptate consectetur consequuntur incidunt voluptas nemo saepe. Neque nobis tempore accusantium hic facere.
-        Quod, natus. Soluta illo aliquid cumque aspernatur praesentium quaerat porro officia, placeat tempora ipsam minus harum rerum magnam corporis explicabo quisquam possimus quos impedit modi? Natus quaerat quod explicabo sint!
-        Porro voluptas magnam perspiciatis vero vitae accusantium commodi ex aperiam. Tenetur, dicta soluta, consectetur nam recusandae alias laborum quibusdam vero ducimus corporis molestias unde modi ab ipsum minus delectus ad!
-        Repellendus possimus consequatur dicta fugiat. Ab placeat accusantium explicabo. Eveniet error, qui obcaecati assumenda deleniti, itaque aspernatur doloremque vel omnis corporis inventore laudantium est porro beatae cupiditate? Minus, pariatur natus.
-        Dolorum dolores neque alias temporibus earum asperiores hic architecto eligendi harum deserunt quae praesentium optio exercitationem assumenda enim excepturi repellat expedita, vel quas amet quis velit possimus perferendis? Modi, in.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur minus rem velit esse iusto et laborum, laudantium saepe non in ducimus placeat, distinctio animi! Ut explicabo eius autem iste obcaecati.
-        Eaque minus veniam aspernatur odit adipisci velit sit dolorem fugit commodi! Quasi est impedit aliquam perspiciatis ullam quaerat excepturi, commodi, aliquid blanditiis dicta voluptas cupiditate, velit nostrum corporis voluptatem minus.
-        Ab quam repudiandae placeat necessitatibus ducimus quisquam neque eveniet, aut eaque error aliquam excepturi maxime obcaecati delectus veniam? Rerum quas vel asperiores sunt, a obcaecati minima id libero cupiditate blanditiis!
-        Tenetur maiores rerum laborum repellendus soluta dignissimos nemo inventore, similique totam. Ratione, velit tenetur tempora quod magnam veritatis quo ab possimus sapiente natus atque consequuntur repellendus impedit amet blanditiis id.
-        Vero harum officia repellat alias quibusdam excepturi nobis deleniti, fugiat error adipisci rerum assumenda placeat labore pariatur voluptatum doloribus animi! Nihil quasi repellendus recusandae, molestias minus rerum in corrupti maiores.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni modi dolorem unde eveniet ipsam laboriosam deleniti veniam quam quaerat. Eaque cumque consequatur fuga dolor voluptates eius necessitatibus veniam animi sequi.
-        Neque vitae cupiditate exercitationem rerum corrupti magnam accusantium nobis labore. Facilis in quasi, sequi veritatis molestias, soluta debitis error laboriosam explicabo atque hic eos voluptatem molestiae quas quidem. Illo, aliquid!
-        Quos corporis magnam aliquam nemo distinctio iusto totam rem officia facilis voluptas alias, obcaecati in dolorum ea, numquam harum facere eum maiores deserunt tempora, blanditiis at molestiae dicta explicabo. Ullam.</p>
-    </div>
+      <p>Приложение разработано для упрощения контроля сроков предоставления импортных статистических деклараций, и расчета общей стоимости отгрузок (поступлений) согласно Постановления Совета Министров Республики Беларусь от 14.09.2020 N 533 "О статистическом декларировании товаров". 
+        <h2>Калькулятор &laquo;Расчет срока ИМ СД&raquo;</h2>
+        <p>Калькулятор "Расчет срока ИМ СД" предназначен для вычисления и отображения срока подачи документов с учётом выходных, праздничных дней и перенесённых рабочих дней. Он обрабатывает выбранную пользователем дату, отображая её в формате "день месяц год". Также калькулятор вычисляет и отображает "срок подачи", который приходится на 7-й рабочий день от введенной даты.</p>
+        <h2>Калькулятор &laquo;Конвертор валют СД&raquo;</h2>
+        <p>Этот код реализует калькулятор валют для подсчёта сумм в разных валютах (BYN, USD, EUR, RUR) с возможностью их конвертации по курсам, зависящим от даты. Основные функции:</p>
+        <p>1) Для расчёта суммы, эквивалентной 3000 евро и более за отчётный календарный месяц;
+          2) В случае, если поставки (отгрузки) осуществлены в разных валютах;
+          3) Для контроля графы «стоимость» статистической декларации при указании условия поставки «55» для пересчёта в BYN.</p>
+      </div>
 
     <script src="script_currency.js"></script>
   </body>
