--- a/about.html
+++ b/about.html
@@ -32,10 +32,14 @@
         <h2>Калькулятор &laquo;Расчет срока ИМ СД&raquo;</h2>
         <p>Калькулятор "Расчет срока ИМ СД" предназначен для вычисления и отображения срока подачи документов с учётом выходных, праздничных дней и перенесённых рабочих дней. Он обрабатывает выбранную пользователем дату, отображая её в формате "день месяц год". Также калькулятор вычисляет и отображает "срок подачи", который приходится на 7-й рабочий день от введенной даты.</p>
         <h2>Калькулятор &laquo;Конвертор валют СД&raquo;</h2>
-        <p> 1) Упрощает конвертацию сумм поставок/отгрузок (в том числе оплата которых осущевляется в различных валютах), в EUR, для принятия решения о необходимости, подачи статистической декларации, в поле "дата" необходимо указать дату заключения договора, в рамках которого осуществляется поставки/отгрузки товаров.;
-            2) Для контроля граф 8, 21, 21а статистической декларации, например при указании характера сделки «55» для пересчета в BYN.
-            Поддерживаемые валюты ввода (BYN, USD, EUR, RUR). Вывод результата в валютах (EUR, USD, BYN,)</p>
-      </div>
+        <p> 
+          1) Упрощает конвертацию сумм поставок/отгрузок (в том числе, оплата которых осуществляется в различных валютах) в EUR для принятия решения о необходимости подачи статистической декларации. В поле "дата" необходимо указать дату заключения договора, в рамках которого осуществляются поставки/отгрузки товаров.
+          <br>
+          2) Для контроля граф 8, 21, 21а статистической декларации, например, при указании характера сделки «55» для пересчёта в BYN.
+          <br>
+          Поддерживаемые валюты ввода: BYN, USD, EUR, RUR. Вывод результата в валютах: EUR, USD, BYN.
+      </p>
+            </div>
     <script src="script_currency.js"></script>
   </body>
 </html>
