--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+
   </head>
 
   <body>
