Add versioning to JS files in HTML to force cache update for users

--- a/calc.html
+++ b/calc.html
@@ -28,12 +28,13 @@
         </div>
         
     </header>
-    <script src="calc.js"></script>
-    <script src="toggle.js"></script>
+    <script src="calc.js?v=2026-01"></script>
+<script src="toggle.js?v=2026-01"></script>
+
 
     <div class="container_01">
       <h1>Выберите дату поступления:</h1>
-      <input type="date" id="dateInput" min="2024-01-01" max="2025-12-31" />
+      <input type="date" id="dateInput" min="2024-01-01" max="2026-12-31" />
       <!-- для периода с 2026 года необходимо корректировать "calc.js" путем добавления выходных дней и переносов -->
       <button onclick="displayDate()">Подтвердить</button>
       <div class="result" id="result"></div>
