--- a/currency.html
+++ b/currency.html
@@ -49,6 +49,7 @@
       <div id="resultContainer"></div>
     </div>
 
-    <script src="script_currency.js"></script>
+    <script src="script_currency.js?v=2026-01"></script>
+
   </body>
 </html>
