--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         
     </header>
-    <script src="toggle.js"></script>
+    <script src="toggle.js?v=2026-01"></script>
 
     <div class="container_01">
       <h1>Для начала работы с приложением выберите один из разделов.</h1>
