Add versioning to JS files in HTML

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <p><a href="currency.html">Конвертор валют СД</p>
     </div>
 
-    <script src="script_currency.js"></script>
+    <script src="script_currency.js?v=2026-01"></script>
   </body>
 </html>
