Parse XML files and extract PDFs into a single ZIP

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <ul>
             <li><a href="calc.html">Расчет срока ИМ СД</a></li>
             <li><a href="currency.html">Конвертор валют СД</a></li>
+            <li><a href="base64-converter.html">Извлечь файлы из XML</a></li>
             <li><a href="about.html">О приложении</a></li>
         </ul>
         </div>
@@ -33,6 +34,7 @@
       <h1>Для начала работы с приложением выберите один из разделов.</h1>
     <p><a href="calc.html">Расчет срока ИМ СД</p>
     <p><a href="currency.html">Конвертор валют СД</p>
+      <p><a href="base64-converter.html">Извлечь файлы из XML</p>
     </div>
 
     <script src="script_currency.js?v=2026-01"></script>
