--- a/calc.html
+++ b/calc.html
@@ -18,6 +18,7 @@
           <ul>
             <li><a href="calc.html">Расчет срока ИМ СД</a></li>
           <li><a href="currency.html">Конвертор валют СД</a></li>
+          <li><a href="base64-converter.html">Извлечь файлы из XML</a></li>
           <li><a href="about.html">О приложении</a></li>
         </ul>
         </div>
