Add cross-browser save logic for ZIP downloads

--- a/base64-converter.html
+++ b/base64-converter.html
@@ -43,7 +43,7 @@
         <label>
           <input type="file" id="xmlInput" accept=".xml" multiple />
         </label>
-        <button type="button" id="parseBtn">получить</button>
+        <button type="button" id="parseBtn">скачать все</button>
       </form>
     </div>
 
